--- a/todayWidget/TodayViewController.xib
+++ b/todayWidget/TodayViewController.xib
@@ -16,61 +16,27 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView simulatedAppContext="notificationCenter" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="-1" width="320" height="422"/>
+            <rect key="frame" x="0.0" y="0.0" width="325" height="422"/>
             <subviews>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="p6U-Vm-Jkp">
-                    <rect key="frame" x="20" y="143" width="280" height="149"/>
+                    <rect key="frame" x="20" y="275" width="280" height="97"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="149" id="jMm-ca-akC"/>
-                        <constraint firstAttribute="width" constant="280" id="nd2-Kh-90G"/>
+                        <constraint firstAttribute="height" constant="97" id="WnO-C2-spV"/>
                     </constraints>
                     <animations/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="odk-Sj-ZhX">
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" drawsBackground="YES" id="odk-Sj-ZhX">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" red="0.14888422109999999" green="0.14854765619999999" blue="0.14958278799999999" alpha="0.61305961880000004" colorSpace="calibratedRGB"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="AQ3-aI-xJE">
-                    <rect key="frame" x="20" y="29" width="280" height="89"/>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="cZ1-fA-h2i">
+                    <rect key="frame" x="104" y="225" width="112" height="42"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="280" id="5pd-KC-dy6"/>
-                        <constraint firstAttribute="height" constant="89" id="k4B-pe-1WB"/>
+                        <constraint firstAttribute="height" constant="42" id="7WO-9r-c7q"/>
                     </constraints>
                     <animations/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" borderStyle="bezel" title="Label" drawsBackground="YES" id="3ch-YK-wW3">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" red="0.14888422106190452" green="0.14854765620039059" blue="0.14958278795811519" alpha="0.61305961879432624" colorSpace="calibratedRGB"/>
-                    </textFieldCell>
-                </textField>
-                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="coX-Z8-cqE">
-                    <rect key="frame" x="128" y="331" width="175" height="26"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="1cC-1y-IS6"/>
-                        <constraint firstAttribute="width" constant="170" id="G1M-WD-hrb"/>
-                    </constraints>
-                    <animations/>
-                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="oW1-d7-cU7">
-                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="menu"/>
-                        <menu key="menu" id="rNp-2N-Btz">
-                            <items>
-                                <menuItem title="Item 1" id="uc4-tO-pZT"/>
-                                <menuItem title="Item 2" id="6sy-UH-11J"/>
-                                <menuItem title="Item 3" id="owD-iV-cq3"/>
-                            </items>
-                        </menu>
-                    </popUpButtonCell>
-                </popUpButton>
-                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cZ1-fA-h2i">
-                    <rect key="frame" x="20" y="333" width="48" height="48"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="48" id="AhY-Ox-cv9"/>
-                        <constraint firstAttribute="width" constant="48" id="Qb8-dI-NNh"/>
-                    </constraints>
-                    <animations/>
-                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="swapButton" imagePosition="left" alignment="left" inset="2" id="QU2-fI-R09">
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="SwitchArrows" imagePosition="below" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="QU2-fI-R09">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -78,50 +44,79 @@
                         <action selector="swapButton:" target="-2" id="XHZ-tW-hdN"/>
                     </connections>
                 </button>
-                <popUpButton verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dqX-LG-jcn">
-                    <rect key="frame" x="128" y="357" width="175" height="26"/>
+                <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zqb-PA-hYv">
+                    <rect key="frame" x="20" y="379" width="280" height="23"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="21" id="5rD-TL-P23"/>
-                        <constraint firstAttribute="width" constant="170" id="nyN-O1-Zk5"/>
+                        <constraint firstAttribute="height" constant="22" id="Dzd-Ax-Suh"/>
                     </constraints>
                     <animations/>
-                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="LqK-s9-FOQ">
-                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="menu"/>
-                        <menu key="menu" id="Hgy-Ye-HfX">
-                            <items>
-                                <menuItem title="Item 1" id="nko-S4-uM8"/>
-                                <menuItem title="Item 2" id="gC4-l8-VWG"/>
-                                <menuItem title="Item 3" id="HSJ-YN-6vg"/>
-                            </items>
-                        </menu>
-                    </popUpButtonCell>
-                </popUpButton>
+                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="capsule" trackingMode="selectOne" id="RNt-q7-X9c">
+                        <font key="font" metaFont="system"/>
+                        <segments>
+                            <segment label="English" width="78" selected="YES"/>
+                            <segment label="Russian" width="78" tag="1"/>
+                            <segment label="Finnish" width="77"/>
+                            <segment image="swapButton">
+                                <nil key="label"/>
+                            </segment>
+                        </segments>
+                    </segmentedCell>
+                </segmentedControl>
+                <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xtp-nf-q79">
+                    <rect key="frame" x="20" y="194" width="280" height="23"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="22" id="QOC-S0-mHm"/>
+                    </constraints>
+                    <animations/>
+                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="capsule" trackingMode="selectOne" id="pCn-0v-RPQ">
+                        <font key="font" metaFont="system"/>
+                        <segments>
+                            <segment label="English" width="78" selected="YES"/>
+                            <segment label="Russian" width="78" tag="1"/>
+                            <segment label="Finnish" width="77"/>
+                            <segment image="swapButton">
+                                <nil key="label"/>
+                            </segment>
+                        </segments>
+                    </segmentedCell>
+                </segmentedControl>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="AQ3-aI-xJE">
+                    <rect key="frame" x="20" y="90" width="280" height="97"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="97" id="fYb-Wc-m11"/>
+                    </constraints>
+                    <animations/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" drawsBackground="YES" id="3ch-YK-wW3">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" red="0.14888422106190452" green="0.14854765620039059" blue="0.14958278795811519" alpha="0.61305961879432624" colorSpace="calibratedRGB"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
             <constraints>
-                <constraint firstItem="cZ1-fA-h2i" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="4uV-7P-knb"/>
-                <constraint firstAttribute="bottom" secondItem="p6U-Vm-Jkp" secondAttribute="bottom" constant="143" id="4zu-8s-Dgm"/>
-                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="top" secondItem="cZ1-fA-h2i" secondAttribute="bottom" constant="42" id="9n1-FV-XUp"/>
-                <constraint firstAttribute="trailing" secondItem="dqX-LG-jcn" secondAttribute="trailing" constant="20" id="AYl-gY-Orh"/>
-                <constraint firstAttribute="trailing" secondItem="p6U-Vm-Jkp" secondAttribute="trailing" constant="20" id="BRg-ug-tpr"/>
-                <constraint firstItem="cZ1-fA-h2i" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="40" id="EIh-09-y0H"/>
-                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="top" secondItem="coX-Z8-cqE" secondAttribute="bottom" constant="42" id="Esn-zU-ItS"/>
-                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="top" secondItem="dqX-LG-jcn" secondAttribute="bottom" constant="69" id="F42-JW-Q6H"/>
-                <constraint firstItem="AQ3-aI-xJE" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="HZc-JM-R4N"/>
-                <constraint firstAttribute="bottom" secondItem="AQ3-aI-xJE" secondAttribute="bottom" constant="29" id="Ret-bA-eve"/>
-                <constraint firstItem="dqX-LG-jcn" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="40" id="RmM-uH-oAw"/>
-                <constraint firstAttribute="trailing" secondItem="AQ3-aI-xJE" secondAttribute="trailing" constant="20" id="aFo-eD-2OE"/>
-                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="130" id="b08-Sj-tAc"/>
-                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="lEp-oG-U4W"/>
-                <constraint firstItem="AQ3-aI-xJE" firstAttribute="top" secondItem="p6U-Vm-Jkp" secondAttribute="bottom" constant="25" id="n8h-Vu-wFc"/>
-                <constraint firstAttribute="trailing" secondItem="coX-Z8-cqE" secondAttribute="trailing" constant="20" id="uvR-5l-S2W"/>
-                <constraint firstItem="coX-Z8-cqE" firstAttribute="top" secondItem="dqX-LG-jcn" secondAttribute="bottom" constant="6" id="yAL-Bt-5k4"/>
+                <constraint firstAttribute="bottom" secondItem="AQ3-aI-xJE" secondAttribute="bottom" constant="90" id="2Qs-Zg-Rhw"/>
+                <constraint firstAttribute="trailing" secondItem="p6U-Vm-Jkp" secondAttribute="trailing" constant="25" id="AjG-6E-hC8"/>
+                <constraint firstItem="cZ1-fA-h2i" firstAttribute="top" secondItem="p6U-Vm-Jkp" secondAttribute="bottom" constant="8" id="Byx-Zr-Yb6"/>
+                <constraint firstAttribute="trailing" secondItem="xtp-nf-q79" secondAttribute="trailing" constant="25" id="KcJ-CQ-dRa"/>
+                <constraint firstItem="cZ1-fA-h2i" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="104" id="Lf6-wa-oQ0"/>
+                <constraint firstItem="AQ3-aI-xJE" firstAttribute="top" secondItem="xtp-nf-q79" secondAttribute="bottom" constant="8" id="REC-Ac-KIe"/>
+                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="top" secondItem="zqb-PA-hYv" secondAttribute="bottom" constant="8" id="TO5-rY-nY5"/>
+                <constraint firstItem="xtp-nf-q79" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="Uwt-8Y-Ibs"/>
+                <constraint firstAttribute="trailing" secondItem="cZ1-fA-h2i" secondAttribute="trailing" constant="109" id="a9F-LD-grj"/>
+                <constraint firstItem="zqb-PA-hYv" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="bgj-Pa-LL9"/>
+                <constraint firstAttribute="trailing" secondItem="AQ3-aI-xJE" secondAttribute="trailing" constant="25" id="ogZ-Ro-Shj"/>
+                <constraint firstItem="AQ3-aI-xJE" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="vfI-W2-Ojy"/>
+                <constraint firstItem="zqb-PA-hYv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="vl0-Ni-a4f"/>
+                <constraint firstAttribute="trailing" secondItem="zqb-PA-hYv" secondAttribute="trailing" constant="25" id="yKt-rm-9Nu"/>
+                <constraint firstItem="xtp-nf-q79" firstAttribute="top" secondItem="cZ1-fA-h2i" secondAttribute="bottom" constant="8" id="yUS-KK-8iX"/>
+                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="yfF-2M-ft1"/>
             </constraints>
             <animations/>
-            <point key="canvasLocation" x="305" y="357"/>
+            <point key="canvasLocation" x="307.5" y="357"/>
         </customView>
     </objects>
     <resources>
+        <image name="SwitchArrows" width="171" height="77"/>
         <image name="swapButton" width="61.439998626708984" height="61.439998626708984"/>
     </resources>
 </document>
