--- a/todayWidget/TodayViewController.xib
+++ b/todayWidget/TodayViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="15A262e" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="15A278b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
@@ -10,6 +10,9 @@
                 <outlet property="dictController" destination="oaF-a3-DKm" id="Wsj-gP-LPz"/>
                 <outlet property="inputText" destination="p6U-Vm-Jkp" id="9pp-dC-9Ak"/>
                 <outlet property="outputText" destination="PPu-eZ-HN3" id="W6m-bc-UfZ"/>
+                <outlet property="sourceLanguagePopUp" destination="hBS-No-xwb" id="itX-qu-0JO"/>
+                <outlet property="targetLAnguagePopUp" destination="1dY-vf-igL" id="wWW-6w-apl"/>
+                <outlet property="targetLanguagePopUp" destination="i98-sa-swX" id="mWn-h9-bW1"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
@@ -103,6 +106,24 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1dY-vf-igL">
+                    <rect key="frame" x="236" y="192" width="27" height="26"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="22" id="ayK-IC-2S3"/>
+                    </constraints>
+                    <animations/>
+                    <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="4Nu-RS-7xR" id="i98-sa-swX">
+                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="menu"/>
+                        <menu key="menu" id="ds4-xS-dSQ">
+                            <items>
+                                <menuItem title="Item 1" state="on" id="4Nu-RS-7xR"/>
+                                <menuItem title="Item 2" id="Nvv-kY-C08"/>
+                                <menuItem title="Item 3" id="7KR-K2-9Hg"/>
+                            </items>
+                        </menu>
+                    </popUpButtonCell>
+                </popUpButton>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oWX-pb-7V3">
                     <rect key="frame" x="236" y="377" width="27" height="26"/>
                     <constraints>
@@ -125,24 +146,6 @@
                         <binding destination="oaF-a3-DKm" name="contentValues" keyPath="arrangedObjects.value" previousBinding="YT3-qs-YbY" id="LYQ-d6-h8P"/>
                         <binding destination="oaF-a3-DKm" name="contentObjects" keyPath="arrangedObjects.value" previousBinding="LbF-Br-5Xh" id="YT3-qs-YbY"/>
                     </connections>
-                </popUpButton>
-                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1dY-vf-igL">
-                    <rect key="frame" x="236" y="192" width="27" height="26"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="22" id="ayK-IC-2S3"/>
-                    </constraints>
-                    <animations/>
-                    <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="4Nu-RS-7xR" id="i98-sa-swX">
-                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="menu"/>
-                        <menu key="menu" id="ds4-xS-dSQ">
-                            <items>
-                                <menuItem title="Item 1" state="on" id="4Nu-RS-7xR"/>
-                                <menuItem title="Item 2" id="Nvv-kY-C08"/>
-                                <menuItem title="Item 3" id="7KR-K2-9Hg"/>
-                            </items>
-                        </menu>
-                    </popUpButtonCell>
                 </popUpButton>
             </subviews>
             <constraints>
