--- a/todayWidget/TodayViewController.xib
+++ b/todayWidget/TodayViewController.xib
@@ -10,7 +10,8 @@
                 <outlet property="dictController" destination="oaF-a3-DKm" id="Wsj-gP-LPz"/>
                 <outlet property="inputText" destination="p6U-Vm-Jkp" id="9pp-dC-9Ak"/>
                 <outlet property="outputText" destination="PPu-eZ-HN3" id="W6m-bc-UfZ"/>
-                <outlet property="sourceLanguagePopUp" destination="hBS-No-xwb" id="itX-qu-0JO"/>
+                <outlet property="sourceLanguageMenu" destination="Ir4-fd-QH2" id="GFC-dO-ZLl"/>
+                <outlet property="sourceSegmentedButton" destination="zqb-PA-hYv" id="vxy-Jz-8zV"/>
                 <outlet property="targetLAnguagePopUp" destination="1dY-vf-igL" id="wWW-6w-apl"/>
                 <outlet property="targetLanguagePopUp" destination="i98-sa-swX" id="mWn-h9-bW1"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
@@ -18,11 +19,11 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView simulatedAppContext="notificationCenter" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="286" height="422"/>
+        <customView misplaced="YES" simulatedAppContext="notificationCenter" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
+            <rect key="frame" x="0.0" y="0.0" width="316" height="422"/>
             <subviews>
-                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="p6U-Vm-Jkp">
-                    <rect key="frame" x="20" y="275" width="241" height="97"/>
+                <textField verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p6U-Vm-Jkp">
+                    <rect key="frame" x="20" y="275" width="271" height="97"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="97" id="WnO-C2-spV"/>
                     </constraints>
@@ -36,8 +37,27 @@
                         <outlet property="delegate" destination="-2" id="LUe-qC-Npw"/>
                     </connections>
                 </textField>
-                <button translatesAutoresizingMaskIntoConstraints="NO" id="cZ1-fA-h2i">
-                    <rect key="frame" x="104" y="225" width="73" height="42"/>
+                <segmentedControl verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zqb-PA-hYv" customClass="SeparatedButton">
+                    <rect key="frame" x="20" y="379" width="240" height="23"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="22" id="Dzd-Ax-Suh"/>
+                        <constraint firstAttribute="width" constant="210" id="N4k-fl-DVQ"/>
+                    </constraints>
+                    <animations/>
+                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="capsule" trackingMode="selectOne" id="RNt-q7-X9c">
+                        <font key="font" metaFont="system"/>
+                        <segments>
+                            <segment label="English" width="68" selected="YES"/>
+                            <segment label="Russian" width="68" tag="1"/>
+                            <segment label="Finnish" width="66"/>
+                            <segment label="&gt;">
+                                <menu key="menu" id="Ir4-fd-QH2"/>
+                            </segment>
+                        </segments>
+                    </segmentedCell>
+                </segmentedControl>
+                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cZ1-fA-h2i">
+                    <rect key="frame" x="104" y="225" width="103" height="42"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="42" id="7WO-9r-c7q"/>
                     </constraints>
@@ -50,22 +70,6 @@
                         <action selector="swapButton:" target="-2" id="XHZ-tW-hdN"/>
                     </connections>
                 </button>
-                <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zqb-PA-hYv">
-                    <rect key="frame" x="20" y="379" width="210" height="23"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="22" id="Dzd-Ax-Suh"/>
-                        <constraint firstAttribute="width" constant="210" id="N4k-fl-DVQ"/>
-                    </constraints>
-                    <animations/>
-                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="capsule" trackingMode="selectOne" id="RNt-q7-X9c">
-                        <font key="font" metaFont="system"/>
-                        <segments>
-                            <segment label="English" width="68" selected="YES"/>
-                            <segment label="Russian" width="68" tag="1"/>
-                            <segment label="Finnish" width="66"/>
-                        </segments>
-                    </segmentedCell>
-                </segmentedControl>
                 <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xtp-nf-q79">
                     <rect key="frame" x="20" y="194" width="210" height="23"/>
                     <constraints>
@@ -82,8 +86,8 @@
                         </segments>
                     </segmentedCell>
                 </segmentedControl>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="AQ3-aI-xJE">
-                    <rect key="frame" x="20" y="90" width="241" height="97"/>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AQ3-aI-xJE">
+                    <rect key="frame" x="20" y="90" width="271" height="97"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="97" id="fYb-Wc-m11"/>
                     </constraints>
@@ -112,51 +116,19 @@
                         <constraint firstAttribute="width" constant="22" id="ayK-IC-2S3"/>
                     </constraints>
                     <animations/>
-                    <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="4Nu-RS-7xR" id="i98-sa-swX">
+                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="i98-sa-swX">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="menu"/>
-                        <menu key="menu" id="ds4-xS-dSQ">
-                            <items>
-                                <menuItem title="Item 1" state="on" id="4Nu-RS-7xR"/>
-                                <menuItem title="Item 2" id="Nvv-kY-C08"/>
-                                <menuItem title="Item 3" id="7KR-K2-9Hg"/>
-                            </items>
-                        </menu>
+                        <menu key="menu" id="ds4-xS-dSQ"/>
                     </popUpButtonCell>
-                </popUpButton>
-                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oWX-pb-7V3">
-                    <rect key="frame" x="236" y="377" width="27" height="26"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="22" id="wiG-89-nqA"/>
-                    </constraints>
-                    <animations/>
-                    <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="R6m-YK-jFL" id="hBS-No-xwb">
-                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="menu"/>
-                        <menu key="menu" id="PT3-EK-vAq">
-                            <items>
-                                <menuItem title="Item 1" state="on" id="R6m-YK-jFL"/>
-                                <menuItem title="Item 2" id="ABy-Fq-g3z"/>
-                                <menuItem title="Item 3" id="UBx-wb-O13"/>
-                            </items>
-                        </menu>
-                    </popUpButtonCell>
-                    <connections>
-                        <binding destination="oaF-a3-DKm" name="content" keyPath="arrangedObjects" id="LbF-Br-5Xh"/>
-                        <binding destination="oaF-a3-DKm" name="contentValues" keyPath="arrangedObjects.value" previousBinding="YT3-qs-YbY" id="LYQ-d6-h8P"/>
-                        <binding destination="oaF-a3-DKm" name="contentObjects" keyPath="arrangedObjects.value" previousBinding="LbF-Br-5Xh" id="YT3-qs-YbY"/>
-                    </connections>
                 </popUpButton>
             </subviews>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="AQ3-aI-xJE" secondAttribute="bottom" constant="90" id="2Qs-Zg-Rhw"/>
                 <constraint firstItem="1dY-vf-igL" firstAttribute="top" secondItem="p6U-Vm-Jkp" secondAttribute="bottom" constant="59" id="72G-Ot-UgM"/>
-                <constraint firstAttribute="trailing" secondItem="oWX-pb-7V3" secondAttribute="trailing" constant="26" id="7vd-5H-ibb"/>
                 <constraint firstAttribute="trailing" secondItem="p6U-Vm-Jkp" secondAttribute="trailing" constant="25" id="AjG-6E-hC8"/>
                 <constraint firstItem="cZ1-fA-h2i" firstAttribute="top" secondItem="p6U-Vm-Jkp" secondAttribute="bottom" constant="8" id="Byx-Zr-Yb6"/>
-                <constraint firstItem="oWX-pb-7V3" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="21" id="H23-Dd-38q"/>
                 <constraint firstAttribute="trailing" secondItem="xtp-nf-q79" secondAttribute="trailing" constant="25" id="KcJ-CQ-dRa"/>
-                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="top" secondItem="oWX-pb-7V3" secondAttribute="bottom" constant="8" id="KuG-Ax-Rl6"/>
                 <constraint firstItem="cZ1-fA-h2i" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="104" id="Lf6-wa-oQ0"/>
                 <constraint firstItem="PPu-eZ-HN3" firstAttribute="top" secondItem="AQ3-aI-xJE" secondAttribute="bottom" constant="20" id="PaR-dc-q25"/>
                 <constraint firstItem="AQ3-aI-xJE" firstAttribute="top" secondItem="xtp-nf-q79" secondAttribute="bottom" constant="8" id="REC-Ac-KIe"/>
@@ -171,7 +143,6 @@
                 <constraint firstAttribute="trailing" secondItem="AQ3-aI-xJE" secondAttribute="trailing" constant="25" id="ogZ-Ro-Shj"/>
                 <constraint firstItem="AQ3-aI-xJE" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="vfI-W2-Ojy"/>
                 <constraint firstItem="zqb-PA-hYv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="vl0-Ni-a4f"/>
-                <constraint firstItem="oWX-pb-7V3" firstAttribute="leading" secondItem="zqb-PA-hYv" secondAttribute="trailing" constant="8" id="vsH-5A-ZNM"/>
                 <constraint firstItem="1dY-vf-igL" firstAttribute="leading" secondItem="xtp-nf-q79" secondAttribute="trailing" constant="8" id="x5X-wF-qhM"/>
                 <constraint firstAttribute="trailing" secondItem="zqb-PA-hYv" secondAttribute="trailing" constant="25" id="yKt-rm-9Nu"/>
                 <constraint firstItem="xtp-nf-q79" firstAttribute="top" secondItem="cZ1-fA-h2i" secondAttribute="bottom" constant="8" id="yUS-KK-8iX"/>
